# GrabIt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/: grabit.rc  manifest.xml
assets/icons/: README.md
docs/: CAPTURE-CLI.md  PLAN.md
src/: cli.rs  history.css  history.rs  main.rs
src/app/: mod.rs  paths.rs  single_instance.rs
src/autostart/: mod.rs
src/capture/: cursor.rs  delay.rs  exact_dims.rs  gdi.rs  gif_record.rs  mod.rs  multi_region.rs  object_pick.rs  region.rs  wgc.rs  window_lookup.rs  window_pick.rs
src/editor/: app.rs  commands.rs  document.rs  dx_app.css  dx_app.rs  gif_app.css  gif_app.rs  mod.rs  rasterize.rs
src/editor/tools/: arrow.rs  blur.rs  callout.rs  capture_info.rs  cursor_edit.rs  magnify.rs  mod.rs  selection.rs  shape.rs  stamp.rs  step.rs  text.rs
src/export/: gif.rs  mod.rs
src/hotkeys/: bindings.rs  mod.rs
src/platform/: dpi.rs  fonts.rs  icon.rs  mod.rs  monitors.rs
src/presets/: mod.rs
src/settings/: mod.rs  ui.css  ui.rs
src/styles/: mod.rs
src/tray/: menu.rs  mod.rs
