[package]
name = "grabit"
version = "1.7.1"
edition = "2021"
rust-version = "1.78"
description = "Lightweight Windows screenshot and annotation tool"
license = "UNLICENSED"
publish = false

[[bin]]
name = "grabit"
path = "src/main.rs"

[profile.release]
# Relaxed from `lto = "fat"` + `strip = "symbols"` + `panic = "abort"`
# + `opt-level = "z"`. That combination reads as "packed / obfuscated
# binary" to AV / SafeBrowsing heuristic scanners — symbol-stripped,
# size-aggressive LTO output looks much more like packer output than
# a typical Rust release. Trade ~3-4 MB binary size for output that
# looks like a normal compiler artifact. Code signing is the only
# real fix; this is a heuristic-score reduction attempt.
lto = "thin"
codegen-units = 16
opt-level = 3
panic = "unwind"
incremental = false

[profile.dev]
opt-level = 1

[build-dependencies]
embed-resource = "2.5"
ico = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rmp-serde = "1.3"
rfd = "0.15"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# M4: imageproc's gaussian_blur for non-destructive blur regions. Used at
# flatten-time; no runtime deps added (pure Rust).
imageproc = { version = "0.25", default-features = false }
# Direct gif crate (image 0.25 already pulls it in transitively) so the
# GIF exporter can run NeuQuant per-frame on every CPU core in parallel
# instead of going through image's single-threaded GifEncoder.
gif = "0.13"
rayon = "1.10"
# Dioxus desktop renders the History / Settings / GIF-editor windows
# through Wry/WebView2 with HTML+CSS. The annotation editor still uses
# eframe (it's a custom canvas surface — large port deferred).
dioxus = { version = "0.6", features = ["desktop"] }
# Embeds thumbnail PNGs as `data:image/png;base64,...` URIs in the DOM.
base64 = "0.22"
# Dioxus desktop already runs on tokio; we depend on it directly only
# for `tokio::time::sleep` so the flash badge in EntryCard can
# auto-clear. `time` is the only feature we need.
tokio = { version = "1", features = ["time"] }

tray-icon = "0.19"
global-hotkey = "0.6"
# `winreg` was used for the HKCU Run-key autostart toggle. Removed in
# 1.6.4 because writes to that key are a major heuristic trigger for
# Defender's ML scanner — getting the binary flagged as
# Wacatac.c!ml. Users now manage startup themselves via
# Task Manager → Startup tab.

# All editor / settings / history / gif-editor windows render through
# Dioxus desktop now. eframe + egui + winit + ab_glyph are no longer
# needed — `rasterize` still uses ab_glyph for offscreen text layout
# at flatten-time, kept below as a direct dep.
ab_glyph = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Storage_Xps",
    "Win32_System_LibraryLoader",
    # M6: UI Automation for object/menu capture (IUIAutomation COM) +
    # SetWinEventHook plumbing for menu-follow. Both live under
    # Win32_UI_Accessibility.
    "Win32_UI_Accessibility",
]

[target.'cfg(windows)'.dependencies.windows-core]
version = "0.58"

# Editor deps (M2+) are added incrementally.
# eframe / egui / egui-wgpu / imageproc / fast_image_resize pinned in plan file;
# introduced when their milestone lands so M0 keeps a minimal dep graph.
